Updated end-of-day progress for June 5th

--- a/notes/2017-06-05.md
+++ b/notes/2017-06-05.md
@@ -2,6 +2,10 @@
 
 Starting the day with a linux tutorial from ryanstutorials.net
 
+cleaned the wired lab
+
+got to section 8 of tutorial: Permissions
+
 _to do_
 - num_passes and duration in function call
 - if both, return whichever happens first
