Modification to get_passes_test_notebook
Using the notebook to test rewrites to the get_passes function.
These include adding more arguments, docstring, etc.

--- a/jupyter_notebooks/get_passes_test_notebook.ipynb
+++ b/jupyter_notebooks/get_passes_test_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -145,13 +145,278 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
    ],
    "source": [
+    "# get_passes() function prior to 6/6/17\n",
+    "\n",
+    "\n",
+    "# get_passes() function\n",
+    "# This function will take in a 3 element list of observer data containing [name,latitude,longitude,altitude],\n",
+    "# a 3 element list of satellite TLE data, a start time formatted as an ephem date, and a desired number of passes to find\n",
+    "# EX: vu = ['Valparaiso University', '41.4639', '-87.0439', 245.089]\n",
+    "#     tle = ['ISS', '1 25544U 98067A   17144.56334412  .00016717  00000-0  10270-3 0  9002', '2 25544  51.6383 156.0737 0005162 190.1606 169.9443 15.53944016 18074']\n",
+    "#     start_time = '2017/5/30 12:00:00'\n",
+    "#     num_passes = 20\n",
+    "# This function will return a list called pass_data with number of elements = num_passes.\n",
+    "# Each element in pass_data is a 5-element list containing:\n",
+    "#    rise_time (ephem date), set_time (ephem date), pass_duration (as fraction of a day), rise_az (in deg), set_az (in deg)\n",
+    "# for each pass.\n",
+    "\n",
+    "# Import necessary libraries\n",
+    "import ephem\n",
+    "import math\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# get_passes() function definition\n",
+    "def get_passes(observer,tle,start_time,num_passes):\n",
+    "    \"\"\"lkjhgkjhgjkghkjhg\"\"\"\n",
+    "\n",
+    "    obs_name, obs_lat, obs_lon, obs_alt = observer\n",
+    "    tle_line0, tle_line1, tle_line2 = tle\n",
+    "    start = ephem.date(start_time)\n",
+    "\n",
+    "    # Set up location of observer\n",
+    "    ground_station = ephem.Observer()\n",
+    "    ground_station.name = obs_name                                           # name string\n",
+    "    ground_station.lon = obs_lon                                             # in degrees (+E)\n",
+    "    ground_station.lat = obs_lat                                             # in degrees (+N)\n",
+    "    ground_station.elevation = obs_alt                                       # in meters\n",
+    "    ground_station.date = start                                              # in UTC (begin looking for next sat passes at this time)\n",
+    "\n",
+    "    # Read in most recent satellite TLE data\n",
+    "    sat = ephem.readtle(tle_line0, tle_line1,tle_line2)\n",
+    "\n",
+    "    # Find all passes during duration\n",
+    "    i = 0\n",
+    "    pass_data = {}\n",
+    "    for i in range(num_passes):\n",
+    "        sat.compute(ground_station)                                          # compute all body attributes for sat\n",
+    "        # next pass command yields array with [0]=rise time, [1]=rise azimuth, [2]=max alt time, [3]=max alt, [4]=set time, [5]=set azimuth\n",
+    "        info = ground_station.next_pass(sat)\n",
+    "        rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "        deg_per_rad = 180.0/math.pi                                          # use to display azimuth in degrees\n",
+    "        pass_duration = (set_time-rise_time)                                 # (set time - rise time) --> fraction of a day\n",
+    "\n",
+    "        if set_time > rise_time:                                             # only update if the set time is greater than the rise time\n",
+    "            ground_station.date = set_time                                   # new observer date & time = previous set time\n",
+    "\n",
+    "        pass_data[i] = [rise_time, set_time, pass_duration, (rise_az*deg_per_rad), (set_az*deg_per_rad)]\n",
+    "\n",
+    "        ground_station.date = ground_station.date + ephem.minute             # increase time by 1 min and look for next pass\n",
+    "    return pass_data                                                         # return list of 5-element pass predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2017/5/30 12:00:00\n",
+      "2017/5/31 00:33:00\n"
+     ]
+    }
+   ],
+   "source": [
+    "start_time = '2017/5/30 12:00:00'\n",
+    "start = ephem.date(start_time)\n",
+    "duration = 12.55\n",
+    "print(start)\n",
+    "print(ephem.date(start+duration*ephem.hour))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "# 6/6/17 get_passes() edits\n",
+    "\n",
+    "# Import necessary libraries\n",
+    "import ephem\n",
+    "import math\n",
+    "from datetime import datetime\n",
+    "\n",
+    "# get_passes() function definition\n",
+    "def get_passes_two(observer,tle,start_time,num_passes=None,duration=None):\n",
+    "    \"\"\"Configure observer and satellite, Return pass data for all passes in given interval.\n",
+    "    \n",
+    "    Arguments:\n",
+    "    observer -- 4 element list containing desired [name,lat,lon,alt]\n",
+    "    tle -- 3 element list containing desired tle [line0,line1,line2]\n",
+    "    start_time -- ephem.date string formatted 'yyyy/mm/dd hr:min:sec'\n",
+    "    num_passes -- integer number of desired passes (defualt None)\n",
+    "    duration -- float number of hours or fraction of hours (default None)\n",
+    "    \n",
+    "    Specify either num_passes or duration.\n",
+    "    If both, use num_passes.\n",
+    "    If neither, find passes for next 24 hours.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    obs_name, obs_lat, obs_lon, obs_alt = observer\n",
+    "    tle_line0, tle_line1, tle_line2 = tle\n",
+    "    \n",
+    "    # Set up location of observer\n",
+    "    ground_station = ephem.Observer()\n",
+    "    ground_station.name = obs_name                                           # name string\n",
+    "    ground_station.lon = obs_lon                                             # in degrees (+E)\n",
+    "    ground_station.lat = obs_lat                                             # in degrees (+N)\n",
+    "    ground_station.elevation = obs_alt                                       # in meters\n",
+    "    ground_station.date = ephem.date(start_time)                             # in UTC (begin looking for next sat passes at this time)\n",
+    "\n",
+    "    # Read in most recent satellite TLE data\n",
+    "    sat = ephem.readtle(tle_line0, tle_line1,tle_line2)\n",
+    "    \n",
+    "    pass_data = {}\n",
+    "    i=0\n",
+    "    \n",
+    "    if num_passes!=None and duration==None:\n",
+    "        # if only num_passes specified\n",
+    "        for i in range(num_passes):\n",
+    "            sat.compute(ground_station)                                          # compute all body attributes for sat\n",
+    "            # next pass command yields array with [0]=rise time, [1]=rise azimuth, [2]=max alt time, [3]=max alt, [4]=set time, [5]=set azimuth\n",
+    "            info = ground_station.next_pass(sat)\n",
+    "            rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "            deg_per_rad = 180.0/math.pi                                          # use to display azimuth in degrees\n",
+    "            pass_duration = (set_time-rise_time)                                 # (set time - rise time) --> fraction of a day\n",
+    "\n",
+    "            if set_time > rise_time:                                             # only update if the set time is greater than the rise time\n",
+    "                ground_station.date = set_time                                   # new observer date & time = previous set time\n",
+    "\n",
+    "            pass_data[i] = [rise_time, set_time, pass_duration, (rise_az*deg_per_rad), (set_az*deg_per_rad)]\n",
+    "\n",
+    "            ground_station.date = ground_station.date + ephem.minute             # increase time by 1 min and look for next pass\n",
+    "        return pass_data\n",
+    "    if num_passes==None and duration!=None:\n",
+    "        # if only duration specified\n",
+    "        end_time = ephem.date(ground_station.date+duration*ephem.hour)\n",
+    "        while (ground_station.date <= end_time):\n",
+    "            sat.compute(ground_station)                                          # compute all body attributes for sat\n",
+    "            # next pass command yields array with [0]=rise time, [1]=rise azimuth, [2]=max alt time, [3]=max alt, [4]=set time, [5]=set azimuth\n",
+    "            info = ground_station.next_pass(sat)\n",
+    "            rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "            deg_per_rad = 180.0/math.pi                                          # use to display azimuth in degrees\n",
+    "            pass_duration = (set_time-rise_time)                                 # (set time - rise time) --> fraction of a day\n",
+    "\n",
+    "            if set_time > rise_time:                                             # only update if the set time is greater than the rise time\n",
+    "                ground_station.date = set_time                                   # new observer date & time = previous set time\n",
+    "\n",
+    "            pass_data[i] = [rise_time, set_time, pass_duration, (rise_az*deg_per_rad), (set_az*deg_per_rad)]\n",
+    "\n",
+    "            i=i+1\n",
+    "            ground_station.date = ground_station.date + ephem.minute             # increase time by 1 min and look for next pass\n",
+    "        return pass_data\n",
+    "    if num_passes!=None and duration!=None:\n",
+    "        # if both are specified, use num_passes\n",
+    "        for i in range(num_passes):\n",
+    "            sat.compute(ground_station)                                          # compute all body attributes for sat\n",
+    "            # next pass command yields array with [0]=rise time, [1]=rise azimuth, [2]=max alt time, [3]=max alt, [4]=set time, [5]=set azimuth\n",
+    "            info = ground_station.next_pass(sat)\n",
+    "            rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "            deg_per_rad = 180.0/math.pi                                          # use to display azimuth in degrees\n",
+    "            pass_duration = (set_time-rise_time)                                 # (set time - rise time) --> fraction of a day\n",
+    "\n",
+    "            if set_time > rise_time:                                             # only update if the set time is greater than the rise time\n",
+    "                ground_station.date = set_time                                   # new observer date & time = previous set time\n",
+    "\n",
+    "            pass_data[i] = [rise_time, set_time, pass_duration, (rise_az*deg_per_rad), (set_az*deg_per_rad)]\n",
+    "\n",
+    "            ground_station.date = ground_station.date + ephem.minute             # increase time by 1 min and look for next pass\n",
+    "        return pass_data\n",
+    "    if num_passes==None and duration==None:\n",
+    "        # if neither are specified, get passes for the next 24 hours\n",
+    "        end_time = ephem.date(ground_station.date+1)\n",
+    "        while (ground_station.date <= end_time):\n",
+    "            sat.compute(ground_station)                                          # compute all body attributes for sat\n",
+    "            # next pass command yields array with [0]=rise time, [1]=rise azimuth, [2]=max alt time, [3]=max alt, [4]=set time, [5]=set azimuth\n",
+    "            info = ground_station.next_pass(sat)\n",
+    "            rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "            deg_per_rad = 180.0/math.pi                                          # use to display azimuth in degrees\n",
+    "            pass_duration = (set_time-rise_time)                                 # (set time - rise time) --> fraction of a day\n",
+    "\n",
+    "            if set_time > rise_time:                                             # only update if the set time is greater than the rise time\n",
+    "                ground_station.date = set_time                                   # new observer date & time = previous set time\n",
+    "\n",
+    "            pass_data[i] = [rise_time, set_time, pass_duration, (rise_az*deg_per_rad), (set_az*deg_per_rad)]\n",
+    "\n",
+    "            i=i+1\n",
+    "            ground_station.date = ground_station.date + ephem.minute             # increase time by 1 min and look for next pass\n",
+    "        return pass_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [42884.434691182, 42884.43991920763, 0.005228025627729949, 169.3898798692318, 82.07670985969658], 1: [42884.50003979661, 42884.5076599303, 0.007620133692398667, 224.0069548124835, 57.50470133941467], 2: [42884.5673264383, 42884.57464997139, 0.00732353309285827, 265.9121597857494, 51.11262782352322], 3: [42884.635205144965, 42884.64197067463, 0.00676552966615418, 296.4929111151341, 60.73552425080327], 4: [42884.70261850134, 42884.709823333724, 0.007204832385468762, 308.6423969692394, 89.18613765354696], 5: [42884.76961509613, 42884.77724968808, 0.007634591951500624, 304.12212313501163, 130.06104957165144], 6: [42884.83714153454, 42884.84296395175, 0.005822417209856212, 282.9471979908948, 182.04994968455227], 7: [42885.40006615611, 42885.402609394936, 0.0025432388283661567, 141.46799824032797, 101.89370460435568]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "vu = ['Valparaiso University', '41.4639', '-87.0439', 245.089]\n",
+    "tle = ['ISS', '1 25544U 98067A   17144.56334412  .00016717  00000-0  10270-3 0  9002', '2 25544  51.6383 156.0737 0005162 190.1606 169.9443 15.53944016 18074']\n",
+    "start_time = '2017/5/30 12:00:00'\n",
+    "num_passes = 20\n",
+    "duration = 10.5\n",
+    "\n",
+    "pass_data = get_passes_two(vu,tle,start_time,num_passes=None,duration=None)\n",
+    "    \n",
+    "print(pass_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function get_passes_two in module __main__:\n",
+      "\n",
+      "get_passes_two(observer, tle, start_time, num_passes=None, duration=None)\n",
+      "    Configure observer and satellite, Return pass data for all passes in given interval.\n",
+      "    \n",
+      "    Arguments:\n",
+      "    observer -- 4 element list containing desired [name,lat,lon,alt]\n",
+      "    tle -- 3 element list containing desired tle [line0,line1,line2]\n",
+      "    start_time -- ephem.date string formatted 'yyyy/mm/dd hr:min:sec'\n",
+      "    num_passes -- integer number of desired passes (defualt None)\n",
+      "    duration -- float number of hours or fraction of hours (default None)\n",
+      "    \n",
+      "    Specify either num_passes or duration.\n",
+      "    If both, use num_passes.\n",
+      "    If neither, find passes for next 24 hours.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_passes_two?"
    ]
   }
  ],
