Updated end of day notes for June 7th

--- a/notes/2017-06-07.md
+++ b/notes/2017-06-07.md
@@ -1,4 +1,35 @@
-Replaced get_passes.py with an updated version
+##### Replaced get_passes.py with an updated version
 - includes num_passes and duration
 - includes docstring
 
+I think the function is ok, and I know it is working properly. It might need some work on input and output format.
+That is TBD...
+
+##### Begin work on retrieving tle's 
+
+read a post on how to use requests in python
+
+was able to create an object containing all the text from celestrak.com/NORAD/elements/amateur.txt
+
+next step: figure out how to parse the tle data for each satellite...
+
+---
+PEP8 cheatsheet: https://gist.github.com/RichardBronosky/454964087739a449da04
+
+markdown cheatsheet: https://github.com/adam-p/markdown-here/wiki/Markdown-Cheatsheet
+- which allowed me to do...
+
+```python
+# a 79-char ruler:
+# 34567891123456789212345678931234567894123456789512345678961234567897123456789
+```
+
+**get_passes() is now PEP8 friendly :)**
+
+---
+##### To Do
+* look into json
+
+* read and parse files form file system
+
+* update README.md for scheduling-bazaar
