End of day progress in notes and requests-tle-get-passes

--- a/notes/2017-06-09.md
+++ b/notes/2017-06-09.md
@@ -9,3 +9,8 @@ Last cell in notebook now outputs a list where each element is the desired numbe
 When testing with all satellites in amateur.txt and num_passes = 20, the cell took about 8 seconds to execute.
 
 ---
+- python date time objects for start end times
+
+now have a list of lists of dictionaries
+
+end of day: still working on vu_passes dictionary. Need to find a way to get norad ID from tle
