Update to get_passes() and additional notebook
get_passes now yeilds python datetime objects with duration as a timedelta.
Created new notebook to start answering some scheuling questions with data.

--- a/notes/2017-06-12.md
+++ b/notes/2017-06-12.md
@@ -5,4 +5,10 @@ I am taking a slice of the tle for each sat to find the NORAD ID
 
 pretty print shows output in easily readable format
 
+updated get_passes()
+
 ---
+started new notebook called scheduling-questions-I
+- for the purpose of starting to look at pass data to find overlaps/etc
+
+read part of the U of M paper
