Begin work on questions notebook
also adding notes for June 13

--- a/jupyter_notebooks/scheduling-questions-I.ipynb
+++ b/jupyter_notebooks/scheduling-questions-I.ipynb
@@ -2,6 +2,338 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "# DO ANY PASSES OVERLAP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+   ],
+   "source": [
+    "# Import necessary libraries\n",
+    "import ephem\n",
+    "import math\n",
+    "from datetime import timedelta\n",
+    "from datetime import datetime\n",
+    "\n",
+    "\n",
+    "# get_passes() function definition\n",
+    "def get_passes(observer, tle, start_time, num_passes=None, duration=None):\n",
+    "    \"\"\"Config obs and sat, Return pass data for all passes in given interval.\n",
+    "\n",
+    "    Arguments:\n",
+    "    observer -- 4 element list containing desired [name,lat,lon,alt]\n",
+    "    tle -- 3 element list containing desired tle [line0,line1,line2]\n",
+    "    start_time -- ephem.date string formatted 'yyyy/mm/dd hr:min:sec'\n",
+    "    num_passes -- integer number of desired passes (defualt None)\n",
+    "    duration -- float number of hours or fraction of hours (default None)\n",
+    "\n",
+    "    Specify either num_passes or duration.\n",
+    "    If both, use num_passes.\n",
+    "    If neither, find passes for next 24 hours.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    obs_name, obs_lat, obs_lon, obs_alt = observer\n",
+    "    tle_line0, tle_line1, tle_line2 = tle\n",
+    "\n",
+    "    # Set up location of observer\n",
+    "    ground_station = ephem.Observer()\n",
+    "    ground_station.name = obs_name                # name string\n",
+    "    ground_station.lon = obs_lon                  # in degrees (+E)\n",
+    "    ground_station.lat = obs_lat                  # in degrees (+N)\n",
+    "    ground_station.elevation = obs_alt            # in meters\n",
+    "    ground_station.date = ephem.date(start_time)  # in UTC\n",
+    "\n",
+    "    # Read in most recent satellite TLE data\n",
+    "    sat = ephem.readtle(tle_line0, tle_line1, tle_line2)\n",
+    "\n",
+    "    contacts = []\n",
+    "\n",
+    "    if num_passes is not None and duration is None:\n",
+    "        # if only num_passes specified\n",
+    "        try:\n",
+    "            for i in range(num_passes):\n",
+    "                sat.compute(ground_station)  # compute all body attributes for sat\n",
+    "                # next pass command yields array with [0]=rise time,\n",
+    "                # [1]=rise azimuth, [2]=max alt time, [3]=max alt,\n",
+    "                # [4]=set time, [5]=set azimuth\n",
+    "                info = ground_station.next_pass(sat)\n",
+    "                rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "                deg_per_rad = 180.0/math.pi           # use to conv azimuth to deg\n",
+    "                pass_duration = timedelta(days = set_time-rise_time)  # fraction of a day\n",
+    "\n",
+    "                if set_time > rise_time:  # only update if set time > rise time\n",
+    "                    ground_station.date = set_time  # new obs time = prev set time\n",
+    "\n",
+    "                pass_data = {\n",
+    "                    'start' : rise_time.datetime().ctime(),\n",
+    "                    'end' : set_time.datetime().ctime(),\n",
+    "                    'duration' : str(pass_duration),\n",
+    "                    'rise_az' : (rise_az*deg_per_rad),\n",
+    "                    'set_az' : (set_az*deg_per_rad)\n",
+    "                }\n",
+    "\n",
+    "                # increase by 1 min and look for next pass\n",
+    "                ground_station.date = ground_station.date + ephem.minute\n",
+    "                contacts.append(pass_data)\n",
+    "        except ValueError:\n",
+    "            # No (more) visible passes\n",
+    "            pass\n",
+    "        return contacts\n",
+    "\n",
+    "    if num_passes is None and duration is not None:\n",
+    "        # if only duration specified\n",
+    "        try:\n",
+    "            end_time = ephem.date(ground_station.date+duration*ephem.hour)\n",
+    "            while (ground_station.date <= end_time):\n",
+    "                sat.compute(ground_station)  # compute all body attributes for sat\n",
+    "                # next pass command yields array with [0]=rise time,\n",
+    "                # [1]=rise azimuth, [2]=max alt time, [3]=max alt,\n",
+    "                # [4]=set time, [5]=set azimuth\n",
+    "                info = ground_station.next_pass(sat)\n",
+    "                rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "                deg_per_rad = 180.0/math.pi           # use to conv azimuth to deg\n",
+    "                pass_duration = timedelta(set_time-rise_time)  # fraction of a day\n",
+    "\n",
+    "                if set_time > rise_time:  # only update if set time > rise time\n",
+    "                    ground_station.date = set_time  # new obs time = prev set time\n",
+    "\n",
+    "                pass_data = {\n",
+    "                    'start' : rise_time.datetime().ctime(),\n",
+    "                    'end' : set_time.datetime().ctime(),\n",
+    "                    'duration' : str(pass_duration),\n",
+    "                    'rise_az' : (rise_az*deg_per_rad),\n",
+    "                    'set_az' : (set_az*deg_per_rad)\n",
+    "                }\n",
+    "\n",
+    "                # increase time by 1 min and look for next pass\n",
+    "                ground_station.date = ground_station.date + ephem.minute\n",
+    "        except ValueError:\n",
+    "            # No (more) visible passes\n",
+    "            pass\n",
+    "        return pass_data\n",
+    "\n",
+    "    if num_passes is not None and duration is not None:\n",
+    "        # if both are specified, use num_passes\n",
+    "        try:\n",
+    "            for i in range(num_passes):\n",
+    "                sat.compute(ground_station)  # compute all body attributes for sat\n",
+    "                # next pass command yields array with [0]=rise time,\n",
+    "                # [1]=rise azimuth, [2]=max alt time, [3]=max alt,\n",
+    "                # [4]=set time, [5]=set azimuth\n",
+    "                info = ground_station.next_pass(sat)\n",
+    "                rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "                deg_per_rad = 180.0/math.pi           # use to conv azimuth to deg\n",
+    "                pass_duration = timedelta(set_time-rise_time)  # fraction of a day\n",
+    "\n",
+    "                if set_time > rise_time:  # only update if set time > rise time\n",
+    "                    ground_station.date = set_time   # new obs time = prev set time\n",
+    "\n",
+    "                pass_data = {\n",
+    "                    'start' : rise_time.datetime().ctime(),\n",
+    "                    'end' : set_time.datetime().ctime(),\n",
+    "                    'duration' : str(pass_duration),\n",
+    "                    'rise_az' : (rise_az*deg_per_rad),\n",
+    "                    'set_az' : (set_az*deg_per_rad)\n",
+    "                }\n",
+    "\n",
+    "                # increase time by 1 min and look for next pass\n",
+    "                ground_station.date = ground_station.date + ephem.minute\n",
+    "        except ValueError:\n",
+    "            # No (more) visible passes\n",
+    "            pass\n",
+    "        return pass_data\n",
+    "\n",
+    "    if num_passes is None and duration is None:\n",
+    "        # if neither are specified, get passes for the next 24 hours\n",
+    "        try:\n",
+    "            end_time = ephem.date(ground_station.date+1)\n",
+    "            while (ground_station.date <= end_time):\n",
+    "                sat.compute(ground_station)  # compute all body attributes for sat\n",
+    "                # next pass command yields array with [0]=rise time,\n",
+    "                # [1]=rise azimuth, [2]=max alt time, [3]=max alt,\n",
+    "                # [4]=set time, [5]=set azimuth\n",
+    "                info = ground_station.next_pass(sat)\n",
+    "                rise_time, rise_az, max_alt_time, max_alt, set_time, set_az = info\n",
+    "                deg_per_rad = 180.0/math.pi           # use to conv azimuth to deg\n",
+    "                pass_duration = timedelta(set_time-rise_time)  # fraction of a day\n",
+    "\n",
+    "                if set_time > rise_time:  # only update if set time > rise time\n",
+    "                    ground_station.date = set_time   # new obs time = prev set time\n",
+    "\n",
+    "                pass_data = {\n",
+    "                    'start' : rise_time.datetime().ctime(),\n",
+    "                    'end' : set_time.datetime().ctime(),\n",
+    "                    'duration' : str(pass_duration),\n",
+    "                    'rise_az' : (rise_az*deg_per_rad),\n",
+    "                    'set_az' : (set_az*deg_per_rad)\n",
+    "                }\n",
+    "\n",
+    "                # increase time by 1 min and look for next pass\n",
+    "                ground_station.date = ground_station.date + ephem.minute\n",
+    "        except ValueError:\n",
+    "            # No (more) visible passes\n",
+    "            pass\n",
+    "        return pass_data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "from itertools import islice\n",
+    "data = []\n",
+    "with open('amateur.txt') as f:\n",
+    "    while True:\n",
+    "        #an iterator that returns the next N lines and stops\n",
+    "        tripleline = islice(f, 3)\n",
+    "        #loop over these N lines, removing trailing spaces and \\n\n",
+    "        tle = [x.rstrip() for x in tripleline]\n",
+    "\n",
+    "        #only accept complete data\n",
+    "        #the end of the file *should* have len(tle)==0 but\n",
+    "        #this also handles extra junk at the end\n",
+    "        if len(tle) == 3:\n",
+    "            data.append(tle)\n",
+    "        else:\n",
+    "            break\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+   ],
+   "source": [
+    "vu = ['Valparaiso University', '41.4639', '-87.0439', 245.089]\n",
+    "start_time = '2017/6/8 12:00:00'\n",
+    "num_passes = 1\n",
+    "duration = None\n",
+    "vu_passes = {}\n",
+    "i = 0\n",
+    "\n",
+    "for tle in data:\n",
+    "    # use NORAD ID as key for each satellite\n",
+    "    # value is list of passes, where each pass is a dictionary of data\n",
+    "    vu_passes[data[i][2][2:7]] = get_passes(vu, tle, start_time, num_passes=num_passes, duration=duration)\n",
+    "    i = i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "NORAD ID: 22826 START: Thu Jun  8 12:02:07 2017 END: Thu Jun  8 12:08:08 2017\n",
+      "NORAD ID: 32789 START: Thu Jun  8 14:27:17 2017 END: Thu Jun  8 14:38:00 2017\n",
+      "NORAD ID: 27844 START: Thu Jun  8 12:18:07 2017 END: Thu Jun  8 12:33:52 2017\n",
+      "NORAD ID: 39436 START: Thu Jun  8 18:00:57 2017 END: Thu Jun  8 18:11:25 2017\n",
+      "NORAD ID: 40905 START: Thu Jun  8 13:26:58 2017 END: Thu Jun  8 12:03:53 2017\n",
+      "NORAD ID: 39153 START: Thu Jun  8 15:58:37 2017 END: Thu Jun  8 16:06:02 2017\n",
+      "NORAD ID: 39446 START: Thu Jun  8 12:08:11 2017 END: Thu Jun  8 12:15:33 2017\n",
+      "NORAD ID: 26931 START: Thu Jun  8 19:02:24 2017 END: Thu Jun  8 19:06:29 2017\n",
+      "NORAD ID: 35935 START: Thu Jun  8 19:32:07 2017 END: Thu Jun  8 19:43:37 2017\n",
+      "NORAD ID: 35932 START: Thu Jun  8 18:39:56 2017 END: Thu Jun  8 18:42:26 2017\n",
+      "NORAD ID: 33493 START: Thu Jun  8 12:58:06 2017 END: Thu Jun  8 13:05:10 2017\n",
+      "NORAD ID: 40908 START: Thu Jun  8 12:18:44 2017 END: Thu Jun  8 12:30:45 2017\n",
+      "NORAD ID: 39433 START: Thu Jun  8 14:55:07 2017 END: Thu Jun  8 15:07:03 2017\n",
+      "NORAD ID: 38340 START: Thu Jun  8 13:30:31 2017 END: Thu Jun  8 12:06:45 2017\n",
+      "NORAD ID: 33499 START: Thu Jun  8 21:24:42 2017 END: Thu Jun  8 21:36:09 2017\n",
+      "NORAD ID: 32791 START: Thu Jun  8 12:52:48 2017 END: Thu Jun  8 13:05:12 2017\n",
+      "NORAD ID: 40928 START: Thu Jun  8 13:25:07 2017 END: Thu Jun  8 13:35:51 2017\n",
+      "NORAD ID: 32785 START: Thu Jun  8 12:31:25 2017 END: Thu Jun  8 12:43:48 2017\n",
+      "NORAD ID: 39770 START: Thu Jun  8 16:52:35 2017 END: Thu Jun  8 17:02:59 2017\n",
+      "NORAD ID: 37841 START: Fri Jun  9 03:18:39 2017 END: Fri Jun  9 03:24:27 2017\n",
+      "NORAD ID: 40907 START: Thu Jun  8 12:35:29 2017 END: Thu Jun  8 12:47:05 2017\n",
+      "NORAD ID: 40926 START: Thu Jun  8 13:49:01 2017 END: Thu Jun  8 13:59:40 2017\n",
+      "NORAD ID: 27607 START: Thu Jun  8 22:34:12 2017 END: Thu Jun  8 22:44:40 2017\n",
+      "NORAD ID: 40910 START: Thu Jun  8 12:45:56 2017 END: Thu Jun  8 12:57:16 2017\n",
+      "NORAD ID: 39136 START: Thu Jun  8 13:06:19 2017 END: Thu Jun  8 13:10:16 2017\n",
+      "NORAD ID: 40021 START: Thu Jun  8 15:22:23 2017 END: Thu Jun  8 15:31:51 2017\n",
+      "NORAD ID: 22825 START: Thu Jun  8 17:40:55 2017 END: Thu Jun  8 17:43:06 2017\n",
+      "NORAD ID: 36799 START: Thu Jun  8 18:34:37 2017 END: Thu Jun  8 18:45:32 2017\n",
+      "NORAD ID: 40300 START: Thu Jun  8 16:09:37 2017 END: Thu Jun  8 16:20:22 2017\n",
+      "NORAD ID: 07530 START: Thu Jun  8 13:06:12 2017 END: Thu Jun  8 13:18:54 2017\n",
+      "NORAD ID: 40912 START: Thu Jun  8 12:28:44 2017 END: Thu Jun  8 12:40:33 2017\n",
+      "NORAD ID: 37839 START: Fri Jun  9 00:23:26 2017 END: Fri Jun  9 00:27:03 2017\n",
+      "NORAD ID: 39440 START: Thu Jun  8 12:26:39 2017 END: Thu Jun  8 12:38:42 2017\n",
+      "NORAD ID: 41789 START: Thu Jun  8 15:04:39 2017 END: Thu Jun  8 15:17:58 2017\n",
+      "NORAD ID: 41459 START: Thu Jun  8 12:02:27 2017 END: Thu Jun  8 12:07:45 2017\n",
+      "NORAD ID: 41619 START: Thu Jun  8 14:15:58 2017 END: Thu Jun  8 14:23:31 2017\n",
+      "NORAD ID: 27848 START: Thu Jun  8 12:14:28 2017 END: Thu Jun  8 12:30:13 2017\n",
+      "NORAD ID: 41460 START: Thu Jun  8 12:05:49 2017 END: Thu Jun  8 12:11:44 2017\n",
+      "NORAD ID: 14781 START: Thu Jun  8 13:16:36 2017 END: Thu Jun  8 13:26:56 2017\n",
+      "NORAD ID: 41783 START: Thu Jun  8 13:37:10 2017 END: Thu Jun  8 13:40:59 2017\n",
+      "NORAD ID: 42017 START: Thu Jun  8 14:06:08 2017 END: Thu Jun  8 14:12:52 2017\n",
+      "NORAD ID: 28895 START: Thu Jun  8 20:32:10 2017 END: Thu Jun  8 20:39:20 2017\n",
+      "NORAD ID: 41338 START: Fri Jun  9 02:33:29 2017 END: Fri Jun  9 02:43:13 2017\n",
+      "NORAD ID: 41458 START: Thu Jun  8 13:05:56 2017 END: Thu Jun  8 13:18:39 2017\n",
+      "NORAD ID: 20442 START: Thu Jun  8 16:48:03 2017 END: Thu Jun  8 16:59:57 2017\n",
+      "NORAD ID: 40911 START: Thu Jun  8 12:43:56 2017 END: Thu Jun  8 12:55:21 2017\n",
+      "NORAD ID: 41557 START: Thu Jun  8 15:33:57 2017 END: Thu Jun  8 15:42:24 2017\n",
+      "NORAD ID: 39417 START: Thu Jun  8 12:47:56 2017 END: Thu Jun  8 12:57:31 2017\n",
+      "NORAD ID: 27939 START: Thu Jun  8 19:08:32 2017 END: Thu Jun  8 19:11:38 2017\n",
+      "NORAD ID: 25544 START: Thu Jun  8 19:25:35 2017 END: Thu Jun  8 19:35:05 2017\n",
+      "NORAD ID: 25397 START: Thu Jun  8 16:44:19 2017 END: Thu Jun  8 16:54:07 2017\n",
+      "NORAD ID: 36122 START: Thu Jun  8 13:06:02 2017 END: Thu Jun  8 13:25:54 2017\n",
+      "NORAD ID: 40903 START: Thu Jun  8 13:23:40 2017 END: Thu Jun  8 13:34:55 2017\n",
+      "NORAD ID: 40900 START: Thu Jun  8 13:34:21 2017 END: Thu Jun  8 12:11:32 2017\n",
+      "NORAD ID: 40904 START: Thu Jun  8 12:32:43 2017 END: Thu Jun  8 12:44:29 2017\n",
+      "NORAD ID: 39090 START: Thu Jun  8 12:26:05 2017 END: Thu Jun  8 12:41:16 2017\n",
+      "NORAD ID: 41339 START: Fri Jun  9 02:27:28 2017 END: Fri Jun  9 02:37:04 2017\n",
+      "NORAD ID: 40025 START: Thu Jun  8 14:46:11 2017 END: Thu Jun  8 14:52:26 2017\n",
+      "NORAD ID: 40927 START: Thu Jun  8 13:47:48 2017 END: Thu Jun  8 13:58:29 2017\n",
+      "NORAD ID: 37855 START: Thu Jun  8 13:05:46 2017 END: Thu Jun  8 13:17:05 2017\n",
+      "NORAD ID: 39134 START: Thu Jun  8 12:53:16 2017 END: Thu Jun  8 12:59:10 2017\n",
+      "NORAD ID: 39444 START: Thu Jun  8 12:27:05 2017 END: Thu Jun  8 12:31:49 2017\n",
+      "NORAD ID: 32953 START: Thu Jun  8 12:48:20 2017 END: Thu Jun  8 12:57:02 2017\n",
+      "NORAD ID: 40958 START: Thu Jun  8 15:26:03 2017 END: Thu Jun  8 15:37:33 2017\n",
+      "NORAD ID: 23439 START: Thu Jun  8 12:00:22 2017 END: Thu Jun  8 12:30:08 2017\n",
+      "NORAD ID: 35933 START: Thu Jun  8 19:55:06 2017 END: Thu Jun  8 20:08:08 2017\n",
+      "NORAD ID: 39427 START: Thu Jun  8 13:14:03 2017 END: Thu Jun  8 13:28:04 2017\n",
+      "NORAD ID: 40901 START: Thu Jun  8 13:03:56 2017 END: Thu Jun  8 13:14:48 2017\n",
+      "NORAD ID: 40012 START: Thu Jun  8 14:00:47 2017 END: Thu Jun  8 14:13:07 2017\n",
+      "NORAD ID: 40906 START: Thu Jun  8 12:58:33 2017 END: Thu Jun  8 13:09:23 2017\n",
+      "NORAD ID: 24278 START: Thu Jun  8 12:29:39 2017 END: Thu Jun  8 12:38:13 2017\n",
+      "NORAD ID: 40902 START: Thu Jun  8 12:56:01 2017 END: Thu Jun  8 13:07:00 2017\n",
+      "NORAD ID: 39430 START: Thu Jun  8 13:13:55 2017 END: Thu Jun  8 13:24:08 2017\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sat, passes in vu_passes.items():\n",
+    "    for obs in passes:\n",
+    "        print('NORAD ID:', sat, 'START:', obs['start'], 'END:', obs['end'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 0,
    "metadata": {
     "collapsed": false
